# uav_sf

./: .dockerignore  .gitattributes  .gitignore  AGENT.md  README.md  archive_pre_v4_baton_indexes_script_maps_README.md  archive_pre_v4_baton_indexes_script_maps_monitors_README.md  archive_pre_v4_baton_indexes_script_maps_runners_README.md  archive_pre_v4_baton_indexes_script_maps_utilities_README.md
.github/workflows/: repository-validation.yml
archive/pre_v4_baton/: README.md
artifacts/: README.md
artifacts/figures/: README.md
artifacts/logs/: README.md
artifacts/reports/: README.md
artifacts/tables/: README.md
boards/: README.md
config/: README.md  aerostack2_dependencies.lock.yaml  b1_reference_logger_topics.txt  dependencies.lock.yaml  freshness_logger_topics.txt  m1_anchor_heavy_step.json  m1_anchor_intref_lissajous.json  m1_anchor_sine_5hz.json  m1_anchor_step.json  m2_5_estimator_harsh_300ms_sine8hz.json  m2_safety_envelope.json  m2_search_config.json  m2b_safety_envelope_4x_high_twr.json  m2b_state_map_elites.json  n1_reduced_logger_topics.txt  phase_a2_minimal_logger_topics.txt  w1_aerostack2_runtime.yaml  w1_pid_speed_controller.yaml  w1_rosbag_topics.txt
config/m2_primary_bugs/: switch_severity_grid_0_20260630_e0077.json  switch_severity_grid_0_20260630_e0088.json  switch_severity_grid_0_20260630_e0092.json  switch_severity_guided_0_20260629_e0011.json  switch_severity_guided_0_20260629_e0048.json  (+4 more)
configs/: README.md
data/: README.md
data/raw/: README.md
docker/: Dockerfile  build.sh  run.sh
docs/: ARTIFACT_INDEX.md  ENVIRONMENT.md  M0.md  M1.md  M2.md  M2_5.md  M2_6.md  M2b_1.md  M2b_1_diagnostics.md  NEW_NARRATIVE_v4.md  PROJECT_HANDOFF.md  PROJECT_NARRATIVE_CONTEXT_v2.md  PROJECT_NARRATIVE_CONTEXT_v5.md  PROJECT_NARRATIVE_CONTEXT_v7.md  PROJECT_NARRATIVE_CONTEXT_v8 (1).md  RAPTOR_closeout.md  campaign_runner_20260627.md  differential-fuzzing-learned-uav-controllers.md  equivariance_stage01_analysis_20260709.md  fitness_wire_20260626.md  fullscale_fuzzing_preflight_checklist_v0_1 (1).md  fuzz1_activation_20260625.md  fuzz1b_locked_20260625.md  m0_oracle_sanity.md  m1_anchor_heavy_338_step_classical_metrics.json  m1_anchor_heavy_338_step_classical_task.json  m1_anchor_heavy_338_step_raptor_metrics.json  m1_anchor_heavy_338_step_raptor_task.json  m1_anchor_heavy_max_step_classical_metrics.json  m1_anchor_heavy_max_step_classical_task.json  m1_anchor_heavy_max_step_raptor_metrics.json  m1_anchor_heavy_max_step_raptor_task.json  m1_anchor_heavy_step_classical_metrics.json  m1_anchor_heavy_step_classical_task.json  m1_anchor_heavy_step_raptor_metrics.json  m1_anchor_heavy_step_raptor_task.json  m1_anchor_intref_lissajous_classical_metrics.json  m1_anchor_intref_lissajous_classical_task.json  m1_anchor_intref_lissajous_raptor_metrics.json  m1_anchor_intref_lissajous_raptor_task.json  (+43 more)
family_b/: README.md
img/: README.md  img_style.py  make_fig_rq3_holed_nonmonotonic_boundary.py  make_fig_two_sut_dense_sweep_boundary.py
patches/: README.md
px4_overlay/: README.md
scripts/: README.md  build_microxrce_agent.sh  build_px4_mcnn_sih.sh  build_px4_raptor_sih.sh  build_px4_raptor_unclipped_sih.sh  campaign_runner.py  clone_px4.sh  equivariance_floor_analysis.py  equivariance_transform.py  fuzz1c_severity_scan.py  install_fuzz1b_dds_groundtruth.sh  install_m1_sih_x500.sh  install_m2b_state_shim.sh  install_mcnn_sih_board.sh  install_raptor_sih_board.sh  install_raptor_unclipped_sih_board.sh  m1_compare.py  m1_diff_runner.py  m1_metrics.py  m1_offboard_task.py  m2_5_estimator_fairness.py  m2_5_estimator_scan.py  m2_6_noise_floor.py  m2_6_unshielded_scan.py  m2_map_elites.py  m2b_1_dump_raptor_input.py  m2b_1_ratio_diagnostics.py  m2b_nan_probe.py  m2b_noise_floor.py  m2b_state_profiles.py  m2b_velocity_delay_verify.py  mcnn_gate3_position_error_probe.py  multipolicy_differential.py  parallel_profile.py  property_fitness.py  property_oracle.py  px4_actuator_attribution_audit.py  px4_mixer_fingerprint_round5.py  px4_race_r4_experiment.py  raptor_closeout_gz_probe.py  (+10 more)
scripts/adapters/b1_reference_controller/: CMakeLists.txt  package.xml
scripts/adapters/external_mode_adapter/: CMakeLists.txt  package.xml
scripts/adapters/external_mode_adapter/include/: b1_reference_controller.hpp  freshness_probe_mode.hpp  route_transition_mode.hpp
scripts/adapters/external_mode_adapter/src/: b1_reference_controller.cpp  c1_concurrency_probe.cpp  external_mode.cpp  freshness_probe.cpp  issue162_replay.cpp  p0_executor.cpp  successor_baseline.cpp
scripts/adapters/r1_session_adapter/: CMakeLists.txt  package.xml
scripts/adapters/r1_session_adapter/src/: r1_session_probe.cpp
tests/: test_actuator_writer_collector.py  test_aerostack2_route_mapping.py  test_authority_event_linearization_oracle.py  test_b1_preregistration.py  test_b1_reference_controller.py  test_campaign_runner.py  test_clock_bridge.py  test_common_behavior_core.py  test_compact_route_trace.py  test_dependency_lock.py  test_equivariance_probe.py  test_equivariance_transform.py  test_family_a_fuzzer_v0_activation_rereview.py  test_family_a_fuzzer_v0_activation_review.py  test_family_a_fuzzer_v0_full_readiness.py  test_family_a_fuzzer_v0_preregistration.py  test_family_a_fuzzer_v0_readiness_amendment.py  test_fault_marker.py  test_freshness_harness_contract.py  test_freshness_observability_patch.py  test_freshness_pilot_gate.py  test_freshness_preregistration.py  test_freshness_run_pipeline.py  test_fuzz_case_schema.py  test_fuzzer_minimize.py  test_fuzzer_mutators.py  test_fuzzer_replay.py  test_fuzzer_validity.py  test_interface_experiment_patch.py  test_m2_5_estimator_fairness.py  test_m2b_state_shim_patch.py  test_m_final_completion.py  test_m_final_preregistration.py  test_multipolicy_differential.py  test_n1_trajectory_residue.py  test_observability_matrix.py  test_offboard_adapter_contract.py  test_official_test_coverage.py  test_oracle_live_mutant_metadata.py  test_oracle_validation_suite.py  (+23 more)
tier05_fork_20260712T090728Z/: code.diff  run_index.jsonl  verdict.json  verdict_rule.frozen.md
(+3485 files in other folders)
