<?xml version="1.0"?>
<package format="3">
  <name>b1_reference_controller</name>
  <version>0.1.0</version>
  <description>Bounded deterministic registered controller for the B1 feasibility gate.</description>
  <maintainer email="maintainers@example.com">UAV Route Validation Maintainers</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>eigen3_cmake_module</depend>
  <depend>px4_ros2_cpp</depend>
  <depend>rclcpp</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
