<?xml version="1.0"?>
<package format="3">
  <name>route_transition_external_mode</name>
  <version>0.1.0</version>
  <description>Minimal Family A Dynamic External Mode and P0 Mode Executor.</description>
  <maintainer email="noreply@example.com">uav_sf maintainers</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>eigen3_cmake_module</depend>
  <depend>px4_ros2_cpp</depend>
  <depend>rclcpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
