<?xml version="1.0"?>
<package format="3">
  <name>r1_session_adapter</name>
  <version>0.1.0</version>
  <description>Bounded local External Mode session-rollover test harness.</description>
  <maintainer email="research@example.invalid">UAV SF Research</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>eigen</depend>
  <depend>px4_ros2_cpp</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
